--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,11 +1,10 @@
 stages:
   initial_configuration:
     cmd: 
-    - |
-      echo "gmx insert-molecule -ci ch.gro -nmol 300 -box 6 6 6 -o temp.gro" > results/temp.gro \
-      && echo "gmx insert-molecule -ci cl.gro -nmol ${init_conf.nmol_2} -f temp.gro -try 10000 -o temp2.gro" > results/temp2.gro \
-      && echo "gmx insert-molecule -ci gly.gro -nmol ${init_conf.nmol_3} -f temp2.gro -try 10000 -o temp3.gro" > results/temp3.gro \
-      && echo "gmx insert-molecule -ci water.gro -nmol ${init_conf.nmol_4} -f temp3.gro -try 10000 -o init_conf.gro" > results/init_conf.gro
+    - echo "gmx insert-molecule -ci ch.gro -nmol 300 -box 6 6 6 -o temp.gro" > results/temp.gro
+    - echo "gmx insert-molecule -ci cl.gro -nmol ${init_conf.nmol_2} -f temp.gro -try 10000 -o temp2.gro" > results/temp2.gro 
+    - echo "gmx insert-molecule -ci gly.gro -nmol ${init_conf.nmol_3} -f temp2.gro -try 10000 -o temp3.gro" > results/temp3.gro 
+    - echo "gmx insert-molecule -ci water.gro -nmol ${init_conf.nmol_4} -f temp3.gro -try 10000 -o init_conf.gro" > results/init_conf.gro
     params:
       - init_conf
     outs:
@@ -18,9 +17,8 @@ stages:
 
   nvt_1_ns:
     cmd: 
-    - |
-      echo "gmx grompp -f sim_nvt.mdp -c init_conf.gro -p topology.top -o nvt_out.tpro" > results/nvt_out.tpro \
-      && echo "gmx mdrun -deffnm nvt_out -nt ${nvt_1_ns.nt}"
+      - echo "gmx grompp -f sim_nvt.mdp -c init_conf.gro -p topology.top -o nvt_out.tpro" > results/nvt_out.tpro 
+      - echo "gmx mdrun -deffnm nvt_out -nt ${nvt_1_ns.nt}"
     params:
       - nvt_1_ns
     deps:
