--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,13 +1,15 @@
 stages:
   initial_configuration:
     cmd: 
-    # - gmx insert-molecule -ci ch.gro -nmol 300 -box 6 6 6 -o temp.gro
-    - echo "gmx insert-molecule -ci ch.gro -nmol 300 -box 6 6 6 -o temp.gro" > results/temp.gro
-    - echo "gmx insert-molecule -ci cl.gro -nmol ${init_conf.nmol_2} -f temp.gro -try 10000 -o temp2.gro" > results/temp2.gro 
-    - echo "gmx insert-molecule -ci gly.gro -nmol ${init_conf.nmol_3} -f temp2.gro -try 10000 -o temp3.gro" > results/temp3.gro 
-    - echo "gmx insert-molecule -ci water.gro -nmol ${init_conf.nmol_4} -f temp3.gro -try 10000 -o init_conf.gro" > results/init_conf.gro
+    - ./script.sh
+    # - echo "gmx insert-molecule -ci ch.gro -nmol 300 -box 6 6 6 -o temp.gro" > results/temp.gro
+    # - echo "gmx insert-molecule -ci cl.gro -nmol ${init_conf.nmol_2} -f temp.gro -try 10000 -o temp2.gro" > results/temp2.gro 
+    # - echo "gmx insert-molecule -ci gly.gro -nmol ${init_conf.nmol_3} -f temp2.gro -try 10000 -o temp3.gro" > results/temp3.gro 
+    # - echo "gmx insert-molecule -ci water.gro -nmol ${init_conf.nmol_4} -f temp3.gro -try 10000 -o init_conf.gro" > results/init_conf.gro
     params:
       - init_conf
+    deps:
+      - script.sh
     outs:
       - results/temp.gro:
           cache: true         # save & version this file with DVC
